--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -815,17 +815,10 @@ fieldset {
        border-right:4px solid #000;
        border-bottom:4px solid #000;
        border-left:4px solid #000;
-       -webkit-transition:all 0.5s;
-       -moz-transition:all 0.5s;
-       -o-transition:all 0.5s;
-       transition:all 0.5s;
        cursor : pointer;
 }
 .shoppingCart:hover .arrow{
        border-bottom-color:#000;
-       -webkit-transform:rotate(-180deg);
-        -moz-transform:rotate(-180deg);
-       -o-transform:rotate(-180deg);
        transform:rotate(-180deg);
 }
 .shoppingCart ul{
@@ -838,16 +831,12 @@ fieldset {
        overflow:hidden;
        height:auto;
        background:#fff;
-       -webkit-transition:all 0.1s;
-       -moz-transition:all 0.1s;
-       -o-transition:all 0.1s;
-       transition:all 0.1s;
        font-family : monospace;
        font-size : 13px;
 }
 
 .shoppingCart li:nth-child(odd){ 
-	background : #efe7e7;
+	background : #eee;
 }
 
 .shoppingCart:hover li{
@@ -1224,6 +1213,7 @@ div#or {
 	cursor : pointer;
 	font-size : 13px;
 	color: #ff4d00;
+	display : inline-block;
 }
 
 #profile {
