--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -1639,6 +1639,9 @@ div#or {
 	margin-top : 7px;
 }
 
+#offline span {
+	border: 1px solid #ff3d00;
+}
 
 #loader {
     border-top: 16px solid #ff3d00;
