--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -658,7 +658,7 @@ fieldset {
 	outline:none;
 	padding:12px 10px;
 	width:47.66%;
-	background:#f7f5f3;
+	background:#fff;
 	font-size:14px;
 	color:#3a0b03;
 	border:2px solid #ff4d00;
@@ -1135,7 +1135,7 @@ div#or {
 .register input[type="text"], .register input[type="email"], .register input[type="password"] {
    outline: none;
     border: 1px solid #DFDFDF;
-    background: #f7f5f3;
+    background: #fff;
     padding: 6px;
     margin-bottom: 6px;
     color: #212121;
@@ -1476,7 +1476,7 @@ div#or {
 	outline: none;
 	padding: 12.5px 10px;
 	width:83%;
-	background: #f7f5f3;
+	background: #fff;
 	font-size: 14px;
 	color: #3a0b03;
 	border: none;
