--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -513,9 +513,9 @@ h4 .fa {
 fieldset {
 	box-shadow: 
 		inset 0 0 0 16px #fff, 
-		inset 0 0 0 17px #ffa709, 
+		inset 0 0 0 17px #fff, 
 		inset 0 0 0 18px #fff, 
-		inset 0 0 0 19px #ffa709, 
+		inset 0 0 0 19px #fff, 
 		inset 0 0 0 20px #fff, 
 		inset 0 0 0 21px #ffa709;
 }
@@ -1206,7 +1206,7 @@ div#or {
     padding-bottom: 5px;
     width: 40%;
     border: 1px solid #ff4d00;
-    margin-top : 15px;
+    margin-top : 27px;
 }
 
 .shipping-address a {
