improving the project.

--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -1127,7 +1127,8 @@ div#or {
     border:1px solid #ff4d00;
     background: #fff;
     padding: 4px;
-    margin-bottom: 8px;
+    margin-top : 2px;
+    margin-bottom: 12px;
     color: #212121;
     width: 100%;
     font-size: 14px;
