--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -1009,6 +1009,7 @@ fieldset {
 .checkout-wizard-content p {
 	text-align: left;
     margin: 22px;
+    font-weight : bold;
 }
 
 .checkout-wizard-content fieldset > div {
