improving the project.

--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -1010,11 +1010,11 @@ fieldset {
 	text-align: left;
     margin: 22px;
     font-weight : bold;
+    font-size : 1em;
 }
 
 .checkout-wizard-content fieldset > div {
 	margin-left : 20px;
-	font-size : 0.9em;
 }
 
 .checkout-wizard-content fieldset h4 {
@@ -1032,6 +1032,7 @@ fieldset {
 	line-height : 4em;
 	width : 100%;
 	display : block;
+	white-space: nowrap;
 }
 
 .checkout-wizard-content fieldset > div > span > span{
